--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,14 @@
-amqp==5.0.9
-asgiref==3.5.0
-backports.zoneinfo==0.2.1
-billiard==3.6.4.0
 celery==5.2.3
-click==8.0.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-Deprecated==1.2.13
 Django==4.0.2
 django-filter==21.1
 djangorestframework==3.13.1
+gunicorn==20.1.0
 kombu==5.2.3
-packaging==21.3
-prompt-toolkit==3.0.28
+numpy==1.22.2
+pandas==1.4.1
 psycopg2-binary==2.9.3
-pyparsing==3.0.7
+python-dateutil==2.8.2
 pytz==2021.3
 redis==4.1.4
 requests==2.27.1
-six==1.16.0
-sqlparse==0.4.2
-vine==5.0.0
-wcwidth==0.2.5
-wrapt==1.13.3
+whitenoise==6.0.0
